Добавлено сохранения в фаил. Добавлены тесты.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 logging.level.org.springframework.web=TRACE
+
+remote.path.names = names.json
+remote.path.phone = phone.json
+
+local.path.names = names.json
+local.path.phone = phone.json
